一旦コミット

--- a/StationMap/Base.lproj/Main.storyboard
+++ b/StationMap/Base.lproj/Main.storyboard
@@ -19,12 +19,12 @@
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <connections>
-                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="OdB-Kg-6Ho"/>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="PeD-3E-4xL"/>
                     </connections>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="146-Zp-2rr" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-892" y="109"/>
+            <point key="canvasLocation" x="-1543" y="107"/>
         </scene>
         <!--山手線・駅一覧-->
         <scene sceneID="tne-QT-ifu">
@@ -66,6 +66,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="-73" y="108"/>
         </scene>
         <!--Map View Controller-->
         <scene sceneID="wJ8-vh-UYv">
@@ -90,11 +91,111 @@
                     </view>
                     <connections>
                         <outlet property="mapView" destination="tcG-Ya-hWy" id="ueP-fB-oa5"/>
+                        <segue destination="Kxu-bQ-ypq" kind="presentation" identifier="ToLine" id="kT1-Jt-XLY"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="xKG-PX-wZh" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1125.5999999999999" y="109.29535232383809"/>
+            <point key="canvasLocation" x="735" y="108"/>
+        </scene>
+        <!--Line View Controller-->
+        <scene sceneID="ILi-95-ooW">
+            <objects>
+                <viewController id="Kxu-bQ-ypq" customClass="LineViewController" customModule="StationMap" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="eyC-TT-Dfp">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="9IO-Xc-xOD">
+                                <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                                <items>
+                                    <navigationItem title="路線図一覧" id="S2p-Ip-Wzh">
+                                        <barButtonItem key="leftBarButtonItem" systemItem="done" id="5bI-gT-DtM"/>
+                                    </navigationItem>
+                                </items>
+                            </navigationBar>
+                            <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="laD-YF-Gat">
+                                <rect key="frame" x="0.0" y="64" width="375" height="603"/>
+                                <connections>
+                                    <segue destination="nMN-n4-rA4" kind="embed" identifier="ToLineTable" id="ZYd-4q-bPe"/>
+                                </connections>
+                            </containerView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="laD-YF-Gat" firstAttribute="leading" secondItem="3nB-es-vV3" secondAttribute="leading" id="B5j-0N-9SI"/>
+                            <constraint firstAttribute="trailing" secondItem="9IO-Xc-xOD" secondAttribute="trailing" id="KSk-G2-MfR"/>
+                            <constraint firstAttribute="bottomMargin" secondItem="laD-YF-Gat" secondAttribute="bottom" id="W9E-py-UvT"/>
+                            <constraint firstItem="3nB-es-vV3" firstAttribute="trailing" secondItem="laD-YF-Gat" secondAttribute="trailing" id="eM8-Bi-oKX"/>
+                            <constraint firstItem="9IO-Xc-xOD" firstAttribute="top" secondItem="3nB-es-vV3" secondAttribute="top" id="jGe-Yf-nsy"/>
+                            <constraint firstItem="9IO-Xc-xOD" firstAttribute="leading" secondItem="3nB-es-vV3" secondAttribute="leading" id="jTY-VY-wig"/>
+                            <constraint firstItem="laD-YF-Gat" firstAttribute="top" secondItem="9IO-Xc-xOD" secondAttribute="bottom" id="tA6-wp-Gu2"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="3nB-es-vV3"/>
+                    </view>
+                    <connections>
+                        <outlet property="containerView" destination="laD-YF-Gat" id="7KA-lN-Z6a"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="rEK-mS-JdL" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1561" y="108"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="PWc-6o-ijd">
+            <objects>
+                <viewController id="ihd-xW-eSZ" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="3QO-lO-qH6">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="IyS-nm-LZz"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="y1M-RZ-zNG"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="huf-9t-1vn" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-791" y="-337"/>
+        </scene>
+        <!--Line Table View Controller-->
+        <scene sceneID="X1n-0G-8Ry">
+            <objects>
+                <viewController id="nMN-n4-rA4" customClass="LineTableViewController" customModule="StationMap" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="EiY-Gv-9lO">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="603"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="u86-H0-5C5">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="603"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" restorationIdentifier="LineCell" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="0V0-I7-9th">
+                                        <rect key="frame" x="0.0" y="28" width="375" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="0V0-I7-9th" id="8tg-b5-QRY">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="u86-H0-5C5" firstAttribute="top" secondItem="EiY-Gv-9lO" secondAttribute="top" id="Qmx-dd-giZ"/>
+                            <constraint firstAttribute="trailing" secondItem="u86-H0-5C5" secondAttribute="trailing" id="TS8-6S-fzR"/>
+                            <constraint firstItem="u86-H0-5C5" firstAttribute="leading" secondItem="NeR-75-Jmu" secondAttribute="leading" id="Y1G-0P-ghy"/>
+                            <constraint firstAttribute="bottom" secondItem="u86-H0-5C5" secondAttribute="bottom" id="w2I-nI-kRD"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="NeR-75-Jmu"/>
+                    </view>
+                    <connections>
+                        <outlet property="tableView" destination="u86-H0-5C5" id="diA-bE-2Dt"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="0nP-3t-496" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="265" y="975"/>
         </scene>
     </scenes>
 </document>
