--- a/StationMap/Base.lproj/Main.storyboard
+++ b/StationMap/Base.lproj/Main.storyboard
@@ -110,7 +110,11 @@
                                 <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                                 <items>
                                     <navigationItem title="路線図一覧" id="S2p-Ip-Wzh">
-                                        <barButtonItem key="leftBarButtonItem" systemItem="done" id="5bI-gT-DtM"/>
+                                        <barButtonItem key="leftBarButtonItem" systemItem="cancel" id="5bI-gT-DtM">
+                                            <connections>
+                                                <action selector="cancelTapped:" destination="Kxu-bQ-ypq" id="Cj2-ol-RmH"/>
+                                            </connections>
+                                        </barButtonItem>
                                     </navigationItem>
                                 </items>
                             </navigationBar>
@@ -169,7 +173,7 @@
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="603"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" restorationIdentifier="LineCell" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="0V0-I7-9th">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="LineCell" id="0V0-I7-9th">
                                         <rect key="frame" x="0.0" y="28" width="375" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="0V0-I7-9th" id="8tg-b5-QRY">
